tests/typechecker/should_pass/modules_external.csp
module X
    transparent normal
exports
    P = normal(STOP)
endmodule
