tests/typechecker/should_fail/timed_priority_transparent.csp
transparent timed_priority
P = timed_priority(STOP)
